# ktools

./: .gitignore  CMakeLists.txt  README.md  module.e
src/: basic.cc  basic.hpp  crc.cc  def_export.hpp  hash.cc  hash.h  json.cc  math.cc  random.cc  string_hash.cc  string_hashmap.cc  thread_pool.cc  thread_pool.hpp  var_parser.cc  var_parser.h
tests/: test.cc
